# rustls-wolfcrypt-provider

./: .gitignore  .gitmodules  README.md  build.sh  manifest
.github/test-workspace/: provider-Cargo.toml  rustls-v0.23.35-tests.patch  workspace-Cargo.toml
.github/test-workspace/tests/: Cargo.toml
.github/test-workspace/tests/runners/: all_test_suites.rs
.github/workflows/: macos-build.yml  macos-rustls-tests.yml  main.yml  ubuntu-build.yml  ubuntu-rustls-tests.yml
rustls-wolfcrypt-provider/: Cargo.toml  Makefile  run.sh
rustls-wolfcrypt-provider/examples/: client.rs  server.rs
rustls-wolfcrypt-provider/src/: aead.rs  e2e.rs  error.rs  ex.rs  hash.rs  hkdf.rs  hmac.rs  kx.rs  lib.rs  patch.diff  prf.rs  random.rs  run.sh  sign.rs  tls12Aead.rs  tls13.rs  verify.rs
rustls-wolfcrypt-provider/src/aead/: aes128gcm.rs  aes256gcm.rs  chacha20.rs  quic.rs
rustls-wolfcrypt-provider/src/hash/: sha256.rs  sha384.rs
rustls-wolfcrypt-provider/src/hmac/: hmac.rs  mod.rs  sha256hmac.rs  sha384hmac.rs
rustls-wolfcrypt-provider/src/kx/: sec256r1.rs  sec384r1.rs  sec521r1.rs  x25519.rs
rustls-wolfcrypt-provider/src/sign/: ecdsa.rs  ecdsap256.rs  eddsa.rs  rsa.rs  rsapkcs1.rs  rsapss.rs
rustls-wolfcrypt-provider/src/types/: mod.rs  types.rs
rustls-wolfcrypt-provider/src/verify/: ecdsa.rs  eddsa.rs  rsapkcs1.rs  rsapss.rs
rustls-wolfcrypt-provider/tests/: e2e.rs
wolfcrypt-rs/: Cargo.toml  Makefile  build.rs  libraries.h
wolfcrypt-rs/src/: bindings.rs  lib.rs  random.rs
