[package]
name = "rustls-wolfcrypt-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = "0.23.16"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
der = "0.7"
ecdsa = "0.16.9"
hmac = "0.12"
pkcs8 = "0.10.2"
rand_core = { version = "0.6", features = ["getrandom"] }
rsa = { version = "0.9", features = ["sha2"], default-features = false }
sha2 = { version = "0.10", default-features = false }
signature = "2"
webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc"], default-features = false }
foreign-types = "0.5.0"
rustls-pki-types = "1.10.0"
log = "0.4.22"
env_logger = "0.11.5"
wolfcrypt-rs = { path = "../wolfcrypt-rs" }
rustls-pemfile = "2.2.0"
hex = "0.4.3"

[dev-dependencies]
rcgen = "0.13"
serial_test = "3.1.1"
tokio = { version = "1.41", features = ["macros", "rt", "net", "io-util", "io-std"] }
webpki-roots = "0.26"

[features]
default = []
std = ["pkcs8/std", "rustls/std", "wolfcrypt-rs/std"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
