[package]
name = "rustls-wolfcrypt-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = { version = "0.23.16", default-features = false, features = ["tls12"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
der = { version = "0.7", default-features = false }  
ecdsa = { version = "0.16.9", default-features = false, features = ["alloc"] }
hmac = { version = "0.12", default-features = false }
pkcs8 = { version = "0.10.2", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom", "alloc"] }
rsa = { version = "0.9", features = ["sha2"], default-features = false }
sha2 = { version = "0.10", default-features = false }  
signature = { version = "2", default-features = false } 
webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc"], default-features = false }
foreign-types = { version = "0.5.0", default-features = false } 
rustls-pki-types = { version = "1.10.0", default-features = false } 
log = { version = "0.4.22", default-features = false } 
env_logger = { version = "0.11.5", default-features = false }
wolfcrypt-rs = { path = "../wolfcrypt-rs" }
rustls-pemfile = { version = "2.2.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"]} 

[dev-dependencies]
rcgen = { version = "0.13" }
serial_test = { version = "3.1.1", default-features = false }
tokio = { version = "1.41", features = ["macros", "rt", "net", "io-util", "io-std"], default-features = false }
webpki-roots = { version = "0.26", default-features = false }
rustls = { version = "0.23.16", features = ["std", "tls12"] }
rustls-pemfile = { version = "2.2.0", default-features = false, features = ["std"]}

[features]
default = []
std = ["pkcs8/std", "rustls/std", "wolfcrypt-rs/std"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
